fixed the proble with extra space at the bottom of portfolio image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,7 @@ textarea {
 
 div.portfolio {
   display: inline-block;
+  padding: 0;
   transition: 0.4s;
 }
 
